# bpmner

./: .bazelignore  .bazelrc  .bpmnlintrc  .buildifier.json  .editorconfig  .gitignore  .rumdl.toml  .shellcheckrc  .vale.ini  BUILD.bazel  CHANGELOG.md  Dockerfile.qodana  MODULE.bazel  PROGRESS.md  README.md  WORKSPACE  biome.jsonc  detekt.yml  fix.sh  fix_code_only.py  format.sh  hk.pkl  jacoco.xml  jest.config.js  mise.toml  order-a-beer.bpmn  package.json  patch7.diff  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  qodana.yaml  release-please-config.json  report.txt  rules_jvm_external++maven+maven_install.json  taplo.toml  tasks.toml  toast-process.txt  toast.bpmn  toast.bpmn-from-demo.bpmn  (+2 more)
layout/: BUILD.bazel  package.json  tsconfig.bazel.json  tsconfig.json
layout/src/: layout-bundle.ts  polyfills.ts
layout/test/: smoke.test.ts
layout/types/: graalvm.d.ts  yet-another-bpmn-auto-layout.d.ts
linter/: BUILD.bazel  README.md  index.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-bundle.js  ts.bzl  tsconfig.json
linter/docs/: repair-architecture.md  rule-authoring-guide.md  template.md  toolbox.md
linter/docs/rules/: README.md  act-03-discouraged-business-verbs.md  assoc-01-required-annotation-association.md  data-01-no-type-words-in-data-name.md  evt-01-event-state-name.md  evt-10-start-no-incoming.md  evt-11-message-start-has-message-flow.md  evt-13-intermediate-event-not-action.md  flow-02-diverging-flow-outcome-label.md  gen-02-no-duplicate-diagrams.md  gtw-03-gateway-no-work-label.md  gtw-12-diverging-flow-names.md  gtw-20-no-gateway-join-fork.md  gtw-21-fake-join.md  gtw-22-superfluous-gateway.md  msg-02-message-flow-name-pattern.md  name-02-uncommon-abbreviations.md  name-03-no-element-type-words.md
linter/pkl/: BUILD.bazel  BpmnerLintConfig.pkl  Catalog.pkl  MarkdownGenerator.pkl  PklProject  bpmner.pkl  rules_index.bzl
linter/pkl-rules/: BUILD.bazel  Catalog.pkl
linter/pkl-rules/rules/: BoundaryEventConstraints.pkl  BpmnSubset.pkl  ConvergingGatewayUnnamed.pkl  ErrorEndBoundaryPair.pkl  EventStateName.pkl  EventStatePattern.pkl  GatewayNoWorkLabel.pkl  IntermediateEventNotAction.pkl  KlopsAllowedElements.pkl  MessageFlowNamePattern.pkl  MessageStartHasMessageFlow.pkl  MiTaskAnnotation.pkl  NoTypeWordsInDataName.pkl  RequiredAnnotationAssociation.pkl  StartNoIncoming.pkl  VerbObjectName.pkl
linter/pkl-rules/schema/: RuleCategory.pkl
linter/pkl-rules/test-fixtures/: CatalogTest.pkl  InvalidMissingIntent.pkl  SchemaTest.pkl  UncommonAbbreviations.pkl
linter/pkl/profiles/: RecommendedProfile.pkl  StrictProfile.pkl
linter/pkl/rules/: ActivityLabelCapitalization.pkl  ActorArtifactUsage.pkl  BlackBoxPoolNamedByExternalEntityOrProcess.pkl  BoundaryEventConstraints.pkl  BpmnSubset.pkl  BusinessClarityOverTechnicalDetail.pkl  BusinessMeaningfulLabel.pkl  BusinessProcessElementUsage.pkl  ChildDiagramsKeepPoolProcessName.pkl  ConvergingGatewayUnnamed.pkl  DiscouragedBusinessVerbs.pkl  DivergingFlowNames.pkl  DivergingFlowOutcomeLabel.pkl  DivergingGatewayQuestion.pkl  EnvelopeIconUsage.pkl  ErrorEndBoundaryPair.pkl  EventBasedDirectEvents.pkl  EventStateName.pkl  EventStatePattern.pkl  ExclusiveInclusiveParallelSemantics.pkl  FakeJoin.pkl  GatewayNoWorkLabel.pkl  GroupUsage.pkl  InformationItemVsApplicationComponent.pkl  IntermediateEventNotAction.pkl  KlopsAllowedElements.pkl  LaneLabelsBusinessRolesPerformers.pkl  LinkEventPairing.pkl  LoopTaskAnnotation.pkl  MessageFlowAcrossPools.pkl  MessageFlowNamePattern.pkl  MessageStartHasMessageFlow.pkl  MiTaskAnnotation.pkl  NoDuplicateDiagrams.pkl  NoElementTypeWords.pkl  NoGatewayJoinFork.pkl  NoOverlappingElements.pkl  NoTypeWordsInDataName.pkl  ReceiveTaskVsIntermediateMessageEvent.pkl  RequiredAnnotationAssociation.pkl  (+11 more)
linter/pkl/schema/: BpmnRule.pkl  BpmnRuleProfile.pkl  CheckPrimitive.pkl  RuleCategory.pkl
linter/pkl/test-fixtures/: CatalogTest.pkl  GeneratedEnumsTest.pkl  InvalidAutofixLLM.pkl  InvalidAutofixNone.pkl  RulesIndexTest.pkl  SchemaTest.pkl
linter/rules/: act-01-verb-object-name.ts  act-03-discouraged-business-verbs.ts  data-01-no-type-words-in-data-name.ts  gen-01-klops-allowed-elements.ts  gtw-02-converging-gateway-unnamed.ts  gtw-20-no-gateway-join-fork.ts  gtw-21-fake-join.ts  name-01-business-meaningful-label.ts  name-02-uncommon-abbreviations.ts  name-03-no-element-type-words.ts
linter/scripts/: generate-static-rules.mjs
linter/src/: index.ts  linter-bundle.ts  polyfills.ts  rule-config.ts  rule-manifest.ts  static-rules.ts
linter/src/auto-fix/: engine.ts  registry.ts  types.ts
linter/src/rules/: _helpers.ts  act-01-verb-object-name.ts  act-03-discouraged-business-verbs.ts  act-activity-label-capitalization.ts  act-discouraged-business-verbs.ts  act-loop-task-annotation.ts  act-mi-task-annotation.ts  act-verb-object-name.ts  art-text-annotation-usage.ts  assoc-required-annotation-association.ts  data-no-type-words-in-data-name.ts  gen-bpmn-subset.ts  (+34 more)
linter/test/: auto-fix.test.ts  capabilities.test.ts  lint.test.ts  phase-1-rules.test.ts  smoke.test.ts  test-helpers.ts
linter/types/: bpmn-fixture.d.ts  bpmn-moddle.d.ts  bpmnlint-utils.d.ts  bpmnlint.d.ts  graal.d.ts  wink-nlp.d.ts
src/: BUILD.bazel
src/native-config/: proxy-config.json  reachability-metadata.json  reflect-config.json  resource-config.json  serialization-config.json
src/test/: BUILD.bazel  jar_structure_test.sh  runfiles_data_test.sh
tools/js/: BUILD.bazel  polyfills.ts  test.bzl  test_wrapper.mjs  ts.bzl
tools/pkl-enum-gen/: BUILD.bazel
tools/spotbugs/: BUILD.bazel  spotbugs.bzl
web/: BUILD.bazel  package.json  tsconfig.json
web/src/: app.ts  clarify-form.ts  diagnostic-diff.ts  preview-helpers.ts  preview.ts  result-bar.ts  snapshot-import.ts  stage-rail.ts  stream-settle.ts  viewer-bundle.ts
web/test/: bpmn-js-render.test.ts  clarify-form.test.ts  diagnostic-diff.test.ts  label-metrics.data.ts  preview-helpers.test.ts  result-bar.test.ts  snapshot-import.test.ts  stage-rail.test.ts  stream-settle.test.ts  studio-a11y.test.ts
web/types/: yet-another-bpmn-auto-layout.d.ts
(+1536 files in other folders)
