# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@buildifier_prebuilt//:rules.bzl", "buildifier_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_detekt//detekt:defs.bzl", "detekt_test")
load("//tools/pmd:cpd.bzl", "cpd_test")

package(default_visibility = ["//visibility:public"])

# Link all packages from the root lockfile
npm_link_all_packages(name = "node_modules")

VALE_SRCS = [
    ".vale.ini",
    "README.md",
] + glob([
    "styles/**/*.txt",
    "styles/**/*.yml",
    "test/prose/*.md",
])

exports_files(["toast-process.txt"])

js_test(
    name = "vale_docs_test",
    args = [
        "docs",
        "$(location //linter/pkl:docs)",
    ],
    data = VALE_SRCS + [
        "//:node_modules/@vvago/vale",
        "//linter:vale_docs",
        "//linter/pkl:docs",
    ],
    entry_point = "tools/vale/vale-test.mjs",
)

js_test(
    name = "vale_fixtures_test",
    args = ["fixtures"],
    data = VALE_SRCS + [
        "//:node_modules/@vvago/vale",
        "//linter:vale_docs",
    ],
    entry_point = "tools/vale/vale-test.mjs",
)

build_test(
    name = "linter_bundle_build_test",
    targets = ["//linter:bundle"],
)

build_test(
    name = "typescript_build_test",
    targets = [
        "//layout:ts",
        "//linter:ts",
    ],
)

buildifier_test(
    name = "buildifier_check",
    srcs = glob(
        [
            "**/*.bzl",
            "**/*.bazel",
            "**/WORKSPACE",
            "**/MODULE.bazel",
        ],
        allow_empty = True,
        exclude = ["node_modules/**"],
    ),
)

detekt_test(
    name = "detekt_check",
    srcs = [
        "//src:detekt_srcs",
        "//src/test:detekt_srcs",
    ],
    build_upon_default_config = True,
    cfgs = ["config/detekt/detekt.yml"],
)

cpd_test(
    name = "cpd_kotlin_main",
    srcs = ["//src:cpd_srcs"],
    language = "kotlin",
    minimum_tokens = 100,
)

cpd_test(
    name = "cpd_kotlin_test",
    srcs = ["//src/test:cpd_srcs"],
    language = "kotlin",
    minimum_tokens = 100,
)

cpd_test(
    name = "cpd_typescript_linter",
    srcs = ["//linter:cpd_srcs"],
    language = "typescript",
    minimum_tokens = 100,
)

cpd_test(
    name = "cpd_typescript_layout",
    srcs = ["//layout:cpd_srcs"],
    language = "typescript",
    minimum_tokens = 100,
)

test_suite(
    name = "ci",
    tests = [
        ":buildifier_check",
        ":cpd_kotlin_main",
        ":cpd_kotlin_test",
        ":cpd_typescript_layout",
        ":cpd_typescript_linter",
        ":detekt_check",
        ":linter_bundle_build_test",
        ":typescript_build_test",
        ":vale_docs_test",
        ":vale_fixtures_test",
        "//linter:auto_fix_test",
        "//linter:lint_test",
        "//linter:smoke_test",
        "//linter/pkl:schema_test",
        "//src:ktlint_check",
        "//src/test:ktlint_check",
    ],
)
