# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@buildifier_prebuilt//:rules.bzl", "buildifier_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_detekt//detekt:defs.bzl", "detekt_test")
load("//tools/pmd:cpd.bzl", "cpd_test")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

exports_files(["toast-process.txt"])

buildifier_test(
    name = "buildifier_check",
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "WORKSPACE",
    ],
)

detekt_test(
    name = "detekt_check",
    srcs = [
        "//src:analysis_srcs",
        "//src/test:analysis_srcs",
    ],
    cfgs = ["config/detekt/detekt.yml"],
)

cpd_test(
    name = "cpd_kotlin_main",
    srcs = ["//src:analysis_srcs"],
    language = "kotlin",
    minimum_tokens = 100,
)

cpd_test(
    name = "cpd_kotlin_test",
    srcs = ["//src/test:analysis_srcs"],
    language = "kotlin",
    minimum_tokens = 100,
)

VALE_SRCS = [
    ".vale.ini",
    "README.md",
    "//styles",
] + glob(["test/prose/*.md"])

[js_test(
    name = "vale_%s_test" % mode,
    args = [mode],
    data = VALE_SRCS + [
        "//:node_modules/@vvago/vale",
        "//linter:vale_docs",
    ],
    entry_point = "tools/vale/vale-test.mjs",
) for mode in [
    "docs",
    "fixtures",
]]

build_test(
    name = "typescript_build_test",
    targets = [
        "//layout:bundle",
        "//linter:bundle",
        "//web:bundle",
    ],
)

test_suite(
    name = "ci_static",
    tests = [
        ":buildifier_check",
        ":cpd_kotlin_main",
        ":cpd_kotlin_test",
        ":detekt_check",
        ":vale_docs_test",
        ":vale_fixtures_test",
        "//layout:cpd_check",
        "//linter:cpd_check",
        "//src:ktlint_check",
        "//src/test:ktlint_check",
    ],
)

test_suite(
    name = "ci_typescript",
    tests = [
        ":typescript_build_test",
        "//layout:smoke_test",
        "//linter:auto_fix_test",
        "//linter:capabilities_test",
        "//linter:lint_test",
        "//linter:smoke_test",
    ],
)

test_suite(
    name = "ci_kotlin",
    tests = [
        "//src/test:BpmnAgentFlowSystemTest",
        "//src/test:BpmnAlignmentFailureIntegrationTest",
        "//src/test:BpmnGuardrailSystemTest",
        "//src/test:BpmnerArchitectureTest",
        "//src/test:BpmnerModuleBoundariesTest",
        "//src/test:BpmnerModulithTest",
        "//src/test:bpmnerAppRunfilesDataTest",
    ],
)

test_suite(
    name = "ci",
    tests = [
        ":ci_kotlin",
        ":ci_static",
        ":ci_typescript",
        "//linter/pkl:schema_test",
    ],
)
