# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_sonarqube//:defs.bzl", "sonarqube")
load("@buildifier_prebuilt//:rules.bzl", "buildifier_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_detekt//detekt:defs.bzl", "detekt_test")
load("@rules_kotlin//kotlin:lint.bzl", "ktlint_config")
load("//tools/pmd:cpd.bzl", "cpd_test")
load("//tools/spotbugs:spotbugs.bzl", "spotbugs_sonar_report")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

exports_files(["toast-process.txt"])

filegroup(
    name = "git_info",
    srcs = [".git"],
)

sonarqube(
    name = "sonar",
    srcs = ["//src:analysis_srcs"],
    project_key = "kludgeworks_bpmner_backend",
    project_name = "bpmner Backend",
    scm_info = [":git_info"],
)

buildifier_test(
    name = "buildifier_check",
    exclude_patterns = [
        "./.bazelbsp/*",
        "./.bsp/*",
    ],
    no_sandbox = True,
    tags = ["local"],
    workspace = "//:WORKSPACE",
)

ktlint_config(
    name = "ktlint_config",
    editorconfig = ".editorconfig",
)

detekt_test(
    name = "detekt_check",
    srcs = [
        "//src:analysis_srcs",
        "//src/test:analysis_srcs",
    ],
    cfgs = ["detekt.yml"],
)

cpd_test(
    name = "cpd_kotlin_main",
    srcs = ["//src:analysis_srcs"],
    language = "kotlin",
    minimum_tokens = 150,
)

cpd_test(
    name = "cpd_kotlin_test",
    srcs = ["//src/test:analysis_srcs"],
    language = "kotlin",
    minimum_tokens = 150,
)

spotbugs_sonar_report(
    name = "spotbugs_backend_reports",
    srcs = ["//src:analysis_srcs"],
    sonar_report = "spotbugs-sonar-external-issues.json",
    target = "//src:bpmner_core",
    xml_report = "spotbugs-backend.xml",
)

filegroup(
    name = "spotbugs_backend_sonar_external_issues",
    srcs = [":spotbugs_backend_reports"],
    output_group = "sonar_external_issues",
)

filegroup(
    name = "spotbugs_backend_xml",
    srcs = [":spotbugs_backend_reports"],
    output_group = "spotbugs_xml",
)

VALE_SRCS = [
    ".vale.ini",
    "README.md",
    "//styles",
] + glob(["test/prose/*.md"])

[js_test(
    name = "vale_%s_test" % mode,
    args = [mode],
    data = VALE_SRCS + [
        "//:node_modules/@vvago/vale",
        "//linter:vale_docs",
    ],
    entry_point = "tools/vale/vale-test.mjs",
) for mode in [
    "docs",
    "fixtures",
]]

build_test(
    name = "typescript_build_test",
    targets = [
        "//layout:bundle",
        "//web:bundle",
    ],
)

# CI runs `bazel test //...` directly — no curated test_suite. Every test target
# discoverable in the build graph is part of PR CI by default; the `.bazelrc` policy
# (`test --test_tag_filters=-integration`) gates integration tests off the wildcard
# run. To exercise integration tests use:
#   bazel test --test_tag_filters=integration //src/test/...
#
# Pre-PR-#250 this file carried `:ci`, `:ci_kotlin`, `:ci_typescript`, and `:ci_static`
# allowlists. Curating tests in BUILD inverted the polarity (opt-in to CI) and let
# `RepairRoutingModuleTest` silently break on main between Phase 2F (#243) and PR #249
# until `bazel coverage //...` (SonarCloud) caught it. Removing the curation aligns
# PR CI scope with the SonarCloud coverage job, eliminates the allowlist-drift bug class
# entirely, and matches the canonical Bazel pattern.
