# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

module(
    name = "bpmner",
    version = "0.1.0",
)

# Bazel Rules
bazel_dep(name = "bazel_sonarqube", version = "1.0.6")
bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "aspect_rules_js", version = "3.1.1")
bazel_dep(name = "aspect_rules_ts", version = "3.8.9")
bazel_dep(name = "aspect_rules_esbuild", version = "0.25.1")
bazel_dep(name = "rules_spring", version = "2.6.3")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.33.0")
bazel_dep(name = "rules_pkl", version = "0.15.0")
bazel_dep(name = "rules_detekt", version = "0.8.1.13")
bazel_dep(name = "rules_pmd", version = "0.4.0")
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")

register_toolchains("@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_x86_64")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)

# --- PMD Tooling ---
pmd = use_extension("@rules_pmd//pmd:extensions.bzl", "pmd")
use_repo(pmd, "net_sourceforge_pmd")

# --- Kotlin Toolchain ---
register_toolchains("//tools/kotlin:kotlin_toolchain")

# --- Maven Dependency Versions ---
# The Embabel BOM (embabel-agent-dependencies, below) manages com.embabel.agent:* module
# versions but carries no Spring version management, so Spring Boot / Spring AI are
# pinned here instead, with provenance from the Embabel RC1 artifact POMs (e.g.
# embabel-agent-api-1.0.0-RC1.pom), which hard-pin these versions internally — not chosen
# independently. Re-derive both from the new Embabel POMs on every future Embabel bump.
SPRING_BOOT_VERSION = "3.5.14"

SPRING_AI_VERSION = "1.1.7"

# Target: the latest Embabel 1.0-line release published to Maven Central at bump time
# (1.0.0-RC1 as of this pin; adopt 1.0.0 GA once it supersedes it). The Embabel BOM
# (embabel-agent-dependencies) below is the source of truth for all com.embabel.agent:*
# module versions; EMBABEL_VERSION only seeds the BOM coordinate itself.
EMBABEL_VERSION = "1.0.0-RC1"

KOTLIN_VERSION = "2.1.10"

rules_kotlin_extensions = use_extension(
    "@rules_kotlin//src/main/starlark/core/repositories:bzlmod_setup.bzl",
    "rules_kotlin_extensions",
)
# rules_kotlin_extensions.kotlinc_version(
#     version = KOTLIN_VERSION,
#     sha256 = "c6e9e2636889828e19c8811d5ab890862538c89dc2a3101956dfee3c2a8ba6b1", # https://github.com/JetBrains/kotlin/releases/download/v2.1.10/kotlin-compiler-2.1.10.zip
# )
# use_repo(rules_kotlin_extensions, "com_github_jetbrains_kotlin")

use_repo(rules_kotlin_extensions, "com_github_google_ksp", "com_github_jetbrains_kotlin", "com_github_jetbrains_kotlin_git", "com_github_pinterest_ktlint", "kotlin_build_tools_impl", "kotlinx_coroutines_core_jvm", "kotlinx_serialization_core_jvm", "kotlinx_serialization_json", "kotlinx_serialization_json_jvm")

JUNIT_PLATFORM_VERSION = "1.12.2"

JUNIT_JUPITER_VERSION = "5.12.2"

ELK_VERSION = "0.11.0"

SPRING_MODULITH_VERSION = "1.4.1"

JMOLECULES_VERSION = "2.0.1"

JMOLECULES_INTEGRATIONS_VERSION = "0.33.0"

# jmolecules-archunit must match the version bundled by spring-modulith-core (1.4.1 bundles 0.26.0).
# Using 0.33.0 causes AbstractMethodError because the jMolecules ArchUnit API changed between
# these versions, and Spring Modulith calls into it at compile-time-expected signatures.
JMOLECULES_ARCHUNIT_VERSION = "0.26.0"

# Must match the Pkl CLI version shipped by rules_pkl (see rules_pkl/pkl/private/constants.bzl).
PKL_VERSION = "0.31.0"

# --- Maven Dependencies ---
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.springframework.boot:spring-boot-loader:" + SPRING_BOOT_VERSION,
        "org.springframework.boot:spring-boot-autoconfigure:" + SPRING_BOOT_VERSION,
        "org.springframework.boot:spring-boot-starter:" + SPRING_BOOT_VERSION,
        "org.springframework.boot:spring-boot-starter-test:" + SPRING_BOOT_VERSION,
        # Versions inherited from the Embabel BOM above.
        "com.embabel.agent:embabel-agent-starter-openai",
        "com.embabel.agent:embabel-agent-starter-anthropic",
        "com.embabel.agent:embabel-agent-starter-gemini",
        "com.embabel.agent:embabel-agent-starter-mistral-ai",
        "com.embabel.agent:embabel-agent-starter-shell",
        "com.embabel.agent:embabel-agent-starter-webmvc",
        "com.embabel.agent:embabel-agent-test",
        "org.jetbrains.kotlin:kotlin-reflect:" + KOTLIN_VERSION,
        "org.jetbrains.kotlin:kotlin-test-junit5:" + KOTLIN_VERSION,
        "org.junit.platform:junit-platform-launcher:" + JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-console-standalone:" + JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-reporting:" + JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-engine:" + JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-commons:" + JUNIT_PLATFORM_VERSION,
        "org.junit.jupiter:junit-jupiter-api:" + JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-engine:" + JUNIT_JUPITER_VERSION,
        "org.camunda.bpm.model:camunda-bpmn-model:7.24.0",
        "org.eclipse.elk:org.eclipse.elk.alg.layered:" + ELK_VERSION,
        # Xtext runtime required by ELK's generated LayeredMetaDataProvider (Xtend-generated code)
        "org.eclipse.xtext:org.eclipse.xtext.xbase.lib:2.36.0",
        "org.springframework.modulith:spring-modulith-starter-core:" + SPRING_MODULITH_VERSION,
        "org.springframework.boot:spring-boot-starter-web:" + SPRING_BOOT_VERSION,
        "org.springframework.modulith:spring-modulith-starter-test:" + SPRING_MODULITH_VERSION,
        "org.jmolecules:jmolecules-onion-architecture:" + JMOLECULES_VERSION,
        "org.jmolecules:jmolecules-events:" + JMOLECULES_VERSION,
        "org.jmolecules:jmolecules-cqrs-architecture:" + JMOLECULES_VERSION,
        "org.jmolecules.integrations:jmolecules-starter-ddd:" + JMOLECULES_INTEGRATIONS_VERSION,
        "org.jmolecules.integrations:jmolecules-spring:" + JMOLECULES_INTEGRATIONS_VERSION,
        "org.jmolecules.integrations:jmolecules-archunit:" + JMOLECULES_ARCHUNIT_VERSION,
        "com.tngtech.archunit:archunit:1.4.1",
        "com.github.spotbugs:spotbugs:4.9.8",
        "org.assertj:assertj-core:3.26.3",
        "org.xmlunit:xmlunit-assertj:2.10.0",
        "org.pkl-lang:pkl-config-java:" + PKL_VERSION,
        "org.pkl-lang:pkl-config-kotlin:" + PKL_VERSION,
        # OpenNLP for Phase 3 (#218): SimpleTokenizer + DictionaryLemmatizer. POS-tagging is
        # currently morphological (no pretrained POSModel) — keeps the build hermetic. A
        # POSModel-backed tagger can swap in behind the BpmnNlp interface later.
        "org.apache.opennlp:opennlp-tools:2.5.9",
    ],
    boms = [
        # Source of truth for all com.embabel.agent:* module versions (starters + core).
        "com.embabel.agent:embabel-agent-dependencies:" + EMBABEL_VERSION,
        # Spring AI is transitive via the Embabel starters; import explicitly so every
        # org.springframework.ai:* artifact resolves to one version rather than resolving
        # invisibly under version_conflict_policy = "pinned" below.
        "org.springframework.ai:spring-ai-bom:" + SPRING_AI_VERSION,
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2",
        "https://repo.embabel.com/artifactory/libs-release",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "maven")

# --- Node.js / TypeScript ---
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "24.9.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    lifecycle_hooks_execution_requirements = {
        "@vvago/vale": [
            "no-remote",
            "no-sandbox",
            "requires-network",
        ],
    },
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(ts_version = "5.8.3")
use_repo(rules_ts_ext, "npm_typescript")
