load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools/js:ts.bzl", "bpmner_ts_project")

package(default_visibility = ["//visibility:public"])

LIB_TS_SRCS = glob([
    "src/**/*.ts",
    "types/**/*.d.ts",
])

TEST_TS_SRCS = glob([
    "test/**/*.ts",
])

filegroup(
    name = "cpd_srcs",
    srcs = glob(["src/**/*.ts", "test/**/*.ts"]),
)

copy_file(
    name = "copy_polyfills",
    src = "//tools/js:polyfills.ts",
    out = "src/polyfills-shared.ts",
)

# Link the standalone layout package's node_modules
npm_link_all_packages(name = "node_modules")

LAYOUT_TS_DEPS = [
    "//:node_modules/@types/node",
    "//:node_modules/yet-another-bpmn-auto-layout",
]

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_config(
    name = "tsconfig_bazel",
    src = "tsconfig.bazel.json",
    deps = [":tsconfig"],
)

bpmner_ts_project(
    name = "ts",
    srcs = LIB_TS_SRCS + TEST_TS_SRCS + [":copy_polyfills"],
    out_dir = "tsc",
    tsconfig = ":tsconfig_bazel",
    deps = LAYOUT_TS_DEPS,
)

esbuild(
    name = "bundle",
    srcs = LIB_TS_SRCS + [":copy_polyfills"],
    config = {
        "inject": ["layout/src/polyfills.ts"],
        "sourcemap": False,
    },
    entry_point = "src/layout-bundle.ts",
    format = "iife",
    output = "dist/js/bpmn-layout-bundle.js",
    platform = "node",
    target = "es2022",
    deps = LAYOUT_TS_DEPS,
)

esbuild(
    name = "smoke_test_bundle",
    srcs = LIB_TS_SRCS + TEST_TS_SRCS + [":copy_polyfills"],
    entry_point = "test/smoke.test.ts",
    external = [
        "node:test",
        "node:assert",
    ],
    format = "cjs",
    output = "dist/test/smoke.test.js",
    platform = "node",
    target = "es2022",
    deps = LAYOUT_TS_DEPS,
)

js_test(
    name = "smoke_test",
    data = [":smoke_test_bundle"],
    entry_point = "dist/test/smoke.test.js",
    node_options = ["--test-reporter=spec"],
)
