# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools/js:test.bzl", "bpmner_node_test")
load("//tools/js:ts.bzl", "bpmner_ts_configs", "bpmner_ts_project")

package(default_visibility = ["//src:__subpackages__", "//:__pkg__"])

LIB_SRCS = glob([
    "src/**/*.ts",
    "types/**/*.d.ts",
])

TEST_SRCS = glob([
    "test/**/*.ts",
])

filegroup(
    name = "analysis_srcs",
    srcs = glob([
        "src/**/*.ts",
        "test/**/*.ts",
    ]),
)

copy_file(
    name = "copy_polyfills",
    src = "//tools/js:polyfills.ts",
    out = "src/polyfills-shared.ts",
)

# Link the standalone layout package's node_modules
npm_link_all_packages(name = "node_modules")

LAYOUT_TS_DEPS = [
    "//:node_modules/@types/node",
    "//:node_modules/yet-another-bpmn-auto-layout",
]

bpmner_ts_configs()

bpmner_ts_project(
    name = "ts",
    srcs = LIB_SRCS + TEST_SRCS + [":copy_polyfills"],
    out_dir = "tsc",
    tsconfig = ":tsconfig_bazel",
    deps = LAYOUT_TS_DEPS,
)

esbuild(
    name = "bundle",
    srcs = LIB_SRCS + [":copy_polyfills"],
    config = {
        "inject": ["layout/src/polyfills.ts"],
        "sourcemap": False,
    },
    entry_point = "src/layout-bundle.ts",
    format = "iife",
    output = "dist/js/bpmn-layout-bundle.js",
    platform = "node",
    target = "es2022",
    deps = LAYOUT_TS_DEPS,
)

bpmner_node_test(
    name = "smoke_test",
    entry_point = "test/smoke.test.ts",
    srcs = LIB_SRCS + TEST_SRCS + [":copy_polyfills"],
    deps = LAYOUT_TS_DEPS,
)
