# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools/js:test.bzl", "bpmner_node_test")
load("//tools/js:ts.bzl", "bpmner_ts_configs", "bpmner_ts_project")

package(default_visibility = [
    "//:__pkg__",
    "//src:__subpackages__",
])

LIB_SRCS = glob(
    [
        "src/**/*.ts",
        "types/**/*.d.ts",
    ],
    exclude = ["src/polyfills.ts"],
)

TEST_SRCS = glob([
    "test/**/*.ts",
])

filegroup(
    name = "analysis_srcs",
    srcs = glob(
        [
            "src/**/*.ts",
            "test/**/*.ts",
        ],
        exclude = ["src/polyfills.ts"],
    ),
)

genrule(
    name = "copy_polyfills",
    srcs = ["//tools/js:polyfills.ts"],
    outs = ["src/polyfills-shared.ts"],
    cmd = "cp $< $@",
)

write_file(
    name = "write_polyfills",
    out = "src/polyfills.ts",
    content = [
        "import { installPolyfills } from './polyfills-shared';",
        "installPolyfills();",
    ],
)

# Link the standalone layout package's node_modules
npm_link_all_packages(name = "node_modules")

LAYOUT_TS_DEPS = [
    "//:node_modules/@types/node",
    "//:node_modules/yet-another-bpmn-auto-layout",
]

bpmner_ts_configs()

bpmner_ts_project(
    name = "ts",
    srcs = LIB_SRCS + TEST_SRCS + [
        ":copy_polyfills",
        ":write_polyfills",
    ],
    out_dir = "tsc",
    tsconfig = ":tsconfig_bazel",
    deps = LAYOUT_TS_DEPS,
)

esbuild(
    name = "bundle",
    srcs = LIB_SRCS + [
        ":copy_polyfills",
        ":write_polyfills",
    ],
    config = {
        "inject": ["layout/src/polyfills.ts"],
        "sourcemap": False,
    },
    entry_point = "src/layout-bundle.ts",
    format = "iife",
    output = "dist/js/bpmn-layout-bundle.js",
    platform = "node",
    target = "es2022",
    deps = LAYOUT_TS_DEPS,
)

bpmner_node_test(
    name = "smoke_test",
    srcs = LIB_SRCS + TEST_SRCS + [
        ":copy_polyfills",
        ":write_polyfills",
    ],
    entry_point = "test/smoke.test.ts",
    deps = LAYOUT_TS_DEPS,
)
