# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library", "js_run_binary")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools/js:test.bzl", "bpmner_node_test")
load("//tools/js:ts.bzl", "bpmner_ts_configs", "bpmner_ts_project")

package(default_visibility = ["//src:__subpackages__", "//:__pkg__"])

STATIC_RULES_OUTPUT = "src/generated/static-rules.ts"

LIB_SRCS = glob([
    "src/**/*.ts",
    "types/**/*.d.ts",
])

TEST_SRCS = glob([
    "test/**/*.ts",
])

BPMN_FIXTURES = glob([
    "test/fixtures/**/*.bpmn",
])

copy_file(
    name = "copy_polyfills",
    src = "//tools/js:polyfills.ts",
    out = "src/polyfills-shared.ts",
)

copy_file(
    name = "linter_rules_json",
    src = "//linter/pkl:catalog_json",
    out = "src/generated/linter-rules.json",
)

GENERATED_SRCS = [
    ":generated_rule_registry_ts",
    ":linter_rules_json",
    ":copy_polyfills",
]

js_library(
    name = "vale_docs",
    srcs = [
        "README.md",
        "docs/template.md",
        "docs/toolbox.md",
        "//linter/pkl:generated_docs",
    ],
)

# Link the standalone linter package's node_modules
npm_link_all_packages(name = "node_modules")

LINTER_TS_DEPS = [
    "//:node_modules/@types/node",
    "//:node_modules/bpmn-moddle",
    "//:node_modules/bpmnlint",
    "//:node_modules/bpmnlint-utils",
    "//:node_modules/wink-eng-lite-web-model",
    "//:node_modules/wink-nlp",
]

filegroup(
    name = "analysis_srcs",
    srcs = glob(
        [
            "src/**/*.ts",
            "test/**/*.ts",
        ],
        exclude = ["src/generated/**"],
    ),
)

bpmner_ts_configs()

bpmner_ts_project(
    name = "ts",
    srcs = LIB_SRCS + TEST_SRCS + GENERATED_SRCS,
    assets = BPMN_FIXTURES,
    out_dir = "tsc",
    tsconfig = ":tsconfig_bazel",
    resolve_json_module = True,
    deps = LINTER_TS_DEPS,
)

js_binary(
    name = "generate_rule_registry_bin",
    data = [
        "//:node_modules/bpmnlint",
        "src/generated/linter-rules.json",
        "//linter/pkl:generated_docs",
    ] + glob([
        "src/rules/**/*.ts",
    ]),
    entry_point = "scripts/generate-static-rules.mjs",
)

js_run_binary(
    name = "generated_rule_registry_ts",
    srcs = [
        "src/generated/linter-rules.json",
        "//linter/pkl:generated_docs",
    ] + glob([
        "src/rules/**/*.ts",
    ]),
    outs = [STATIC_RULES_OUTPUT],
    args = [
        "$(location %s)" % STATIC_RULES_OUTPUT,
        "$(location //linter/pkl:generated_docs)",
        "$(location src/generated/linter-rules.json)",
    ],
    mnemonic = "GenerateRuleRegistry",
    progress_message = "Generating %{label}",
    tool = ":generate_rule_registry_bin",
)

esbuild(
    name = "bundle",
    srcs = LIB_SRCS + GENERATED_SRCS,
    config = {
        "inject": ["linter/src/polyfills.ts"],
        "sourcemap": False,
    },
    entry_point = "src/linter-bundle.ts",
    format = "iife",
    output = "dist/js/bpmnlint-bundle.js",
    platform = "node",
    target = "es2022",
    deps = LINTER_TS_DEPS,
)

[bpmner_node_test(
    name = t,
    entry_point = "test/%s.test.ts" % t.replace("_test", "").replace("_", "-"),
    srcs = LIB_SRCS + TEST_SRCS + GENERATED_SRCS + BPMN_FIXTURES,
    deps = LINTER_TS_DEPS,
    loaders = {".bpmn": "text"},
) for t in ["lint_test", "smoke_test", "auto_fix_test", "capabilities_test"]]
